# k8s-sre-copilot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
eval/: __init__.py  run_eval.py  test_set.py
graph/: __init__.py  edges.py  llm_helper.py  nodes.py  state.py  workflow.py
guardrails/: __init__.py  pipeline.py
retrieval/: __init__.py  bm25.py  embed.py  hybrid.py  ingest.py  rerank.py
storage/: postgres.py  qdrant.py  redis.py
ui/: app.py
