[tool.poetry]
name = "k8s-sre-copilot"
version = "0.1.0"
description = "Enterprise Advanced RAG - Kubernetes SRE Copilot"
authors = ["SRE Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langgraph = "*"
langchain-openai = "*"
langchain-community = "*"
qdrant-client = "*"
redis = "*"
psycopg2-binary = "*"
sqlalchemy = "*"
streamlit = "*"
sentence-transformers = "*"
ragas = "*"
presidio-analyzer = "*"
tavily-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
